# Project15R

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: weather.py
app/routers/: check_weather.py  dash_app.py  form.py  weather.py  weather_route.py
app/templates/: form.html
